--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Portafolio</title>
     <script src="https://kit.fontawesome.com/0b4106efe2.js" crossorigin="anonymous"></script>
 </head>
@@ -84,14 +84,14 @@
     </div>
 </section>   
 
-<section id="Mis-trabajos" class="my-5 p-5 bg-black">
+<section id="Mis-trabajos" class="my-5 p-5 ">
 
-    <h2 class="display-4 fw-bold text-center text-light mb-3">Proyectos</h2>
+    <h2 class="display-4 fw-bold text-center text-light mb-3 text-decoration-underline">Proyectos</h2>
 
     <div class="row">
         <div class=" col-12 col-sm-4 py-2">
             <div class="card">
-                <div class="image-top" style="background-image: url(/assets/img/landingpagecover.png)"></div>
+                <div class="image-top" style="background-image: url(assets/img/landingpagecover.png)"></div>
                 <div class="card-body">
                     <h5 class="card-title fw-bold">Desafío Landing Page</h5>
                     <p class="card-text">
@@ -105,7 +105,7 @@
         </div>
         <div class="col-12 col-sm-4 py-2">
             <div class="card">
-                <div class="image-top" style="background-image: url(/assets/img/iguanapagecover.png)"></div>
+                <div class="image-top" style="background-image: url(assets/img/iguanapagecover.png)"></div>
                 <div class="card-body">
                     <h5 class="card-title fw-bold">Desafío Iguana Page</h5>
                     <p class="card-text">
@@ -119,7 +119,7 @@
         </div>
         <div class="col-12 col-sm-4 py-2">
             <div class="card">
-                <div class="image-top" style="background-image: url(/assets/img/cupponcover.png)"></div>
+                <div class="image-top" style="background-image: url(assets/img/cupponcover.png)"></div>
                 <div class="card-body">
                     <h5 class="card-title fw-bold">Desafío Cuppon</h5>
                     <p class="card-text">
@@ -135,15 +135,14 @@
     </div>
 </section>
 
-    <section id="Contacto" class="container my-5 text-dark">
+    <section id="Contacto" class="container my-5" style="color:indigo">
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
         <form>
 
-
             <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
+                 <label class="mb-2">Nombre</label>
                 <input class="form-control" placeholder="Nombre">
             </div>
 
@@ -159,12 +158,13 @@
             </div>
 
             <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+                <button class="btn btn-success text-light">Enviar</button>
             </div>
-     </form>    
+     </form>  
+
 </section>
 
-<footer class=" bg-dark text-center text-light p-4">
+<footer class=" bg-secondary text-center text-light p-4">
     <p class="mb-0">Natali Parada 2022. Todos los derechos reservados.</p>
 </footer>
 
